--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -18,5 +18,6 @@
       var csrfToken = "{{csrf-token}}";
     </script>
     {% script "/js/app.js" %}
+    <script async src="//s.imgur.com/min/embed.js"></script>
   </body>
 </html>
