--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -5,6 +5,13 @@ body {
 #content {
   max-width: 940px;
   margin: 0 auto;
+  padding-top: 30px;
+}
+
+h1,
+h2,
+h3 {
+  margin-bottom: 10px;
 }
 
 h1 {
@@ -12,5 +19,9 @@ h1 {
 }
 
 h2 {
-  font-size: 1.8em;
+  font-size: 1.6em;
+}
+
+h3 {
+  font-size: 1.2em;
 }
