--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -33,3 +33,9 @@ pre {
   border-radius: 2px;
   overflow-y: scroll;
 }
+
+/** Components **/
+.link-tags {
+  float: right;
+  padding-right: 16px;
+}
