Add automatic link media embed for imgur direct links and YouTube/Vimeo

--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -51,6 +51,11 @@ pre {
   width: 45%;
 }
 
+.link-media-embed {
+  text-align: center;
+  padding: 40px;
+}
+
 /** Responsive **/
 @media (max-width: 720px) {
   .query-container h1,
