--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -56,6 +56,10 @@ pre {
   padding: 40px;
 }
 
+.link-media-embed.imgur-embed img {
+  max-width: 100%;
+}
+
 /** Responsive **/
 @media (max-width: 720px) {
   .query-container h1,
